# writing-analyzer

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml  test.txt
benchmark/: README.md  run_benchmark.py
benchmark/human/: sample_01_en.txt  sample_02_tr.txt
benchmark/llm/: sample_01_en.txt  sample_02_tr.txt
docs/: diagnostics.md  improvement_plan.md
frontend/: api_client.py  app.py  components.py  translations.py
src/: main.py
src/analyzers/: base.py  burstiness.py  cliche.py  readability.py  repetition.py  sentence_statistics.py  transition.py  word_statistics.py
src/api/: app.py  dependencies.py  error_handlers.py
src/api/routes/: analyze.py  health.py
src/models/: analysis.py  enums.py  request.py  response.py
src/scoring/: scorer.py  weights.py
src/services/: analysis.py  language_detector.py  tokenizer.py
tests/: conftest.py
tests/integration/: test_analysis_service.py
tests/unit/analyzers/: test_base.py  test_burstiness.py  test_cliche.py  test_readability.py  test_repetition.py  test_sentence_statistics.py  test_transition.py  test_word_statistics.py
tests/unit/api/: test_analyze.py  test_health.py
tests/unit/models/: test_analysis.py  test_enums.py  test_request.py  test_response.py
tests/unit/scoring/: test_scorer.py
tests/unit/services/: test_analysis_service.py  test_language_detector.py  test_tokenizer.py
